--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
     </head>
-    <body>
+    <body onload="init();" >
         <div class="app">
             <h1>Hello World</h1>
             <div id="deviceready" class="blink">
@@ -40,7 +40,7 @@
         <script type="text/javascript" src="js/PushwooshiOS.js"></script>
         <script type="text/javascript" src="js/PushwooshWP.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
-        
+
         <script type="text/javascript">
             app.initialize();
         </script>
