--- a/www/index.html
+++ b/www/index.html
@@ -26,9 +26,9 @@
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
     </head>
-    <body onload="init();" >
+    <body>
         <div class="app">
-            <h1>Hello World</h1>
+            <h1>synPush</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
