--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
     </head>
-    <body>
+    <body onload="init();" >
         <div class="app">
             <h1>synPush</h1>
             <div id="deviceready" class="blink">
