--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,11 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
+        <script type="text/javascript" charset="utf-8">
+          function init() {
+              document.addEventListener("deviceready", initPushwoosh, true);
+            }
+        </script>
     </head>
     <body onload="init();" >
         <div class="app">
